--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/LilOTechGod/Social-network-api#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "express.js": "^1.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.4"
   }
 }
